testdata/invalid/invalid_token_block_comment_eof.bop
/* this comment does not end